# SupplyMind-Enterprise-AI

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/01_Architecture/markdown/: ARCH-005_Technology_Stack_and_Architectural_Decisions.md  ARCH-006_Repository_Module_Design.md  (+3 more)
docs/03_ADRs/: ADR-002_FastAPI_API_Framework.md  ADR-003_Bronze_Silver_Gold_Data_Architecture.md  ADR-004_Clean_Architecture.md  ADR-005_Provider_Agnostic_AI_Architecture.md  ADR-006_Parquet_Primary_Analytical_Storage.md
docs/03_Architecture_Decision_Records/: ADR-001_Modular_Monolith_Architecture.md  README.md
docs/06_Developer_Handbook/: IMPLEMENTATION_06_Enterprise_Exception_Handling.md  IMPLEMENTATION_08_Enterprise_Configuration_Validation.md  IMPLEMENTATION_13_Application_Factory_and_Composition_Root.md  IMPLEMENTATION_14_Enterprise_HTTP_Client_Layer.md  IMPLEMENTATION_17_API_KEY_AUTHENTICATION_PROVIDER.md  IMPLEMENTATION_18_BEARER_TOKEN_AUTHENTICATION_PROVIDER.md  IMPLEMENTATION_19_AUTHENTICATION_FACTORY.md  IMPLEMENTATION_20_AUTHENTICATION_CONFIGURATION_MODELS.md
docs/07_Engineering_Handbook/: CHAPTER_06_Connector_Framework.md  CHAPTER_07_Authentication_Framework.md  README.md
src/supplymind/: __init__.py  app.py
tests/: conftest.py
tests/api/: test_correlation_id.py  test_system.py
tests/application/: test_factory.py
tests/authentication/: test_constants.py  test_exports.py  test_factory.py  test_models.py
tests/core/: test_configuration.py  test_metadata.py  test_runtime.py
tests/middleware/: test_request_logging.py
tests/services/: test_system_service.py
(+97 files in other folders)
