[project]
name = "supplymind-enterprise-ai"
version = "0.1.0"
description = "An enterprise-grade AI platform for supply chain intelligence, forecasting, optimization, and decision support."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Issouf Kabre" }
]
keywords = [
    "artificial-intelligence",
    "machine-learning",
    "supply-chain",
    "enterprise-ai",
    "forecasting",
    "optimization",
    "mlops"
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supplymind"]

[tool.uv]
package = true