[project]
name = "supplymind-enterprise-ai"
version = "0.1.0"
description = "An enterprise-grade AI platform for supply chain intelligence, forecasting, optimization, and decision support."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Issouf Kabre" }
]
keywords = [
    "artificial-intelligence",
    "machine-learning",
    "supply-chain",
    "enterprise-ai",
    "forecasting",
    "optimization",
    "mlops"
]
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supplymind"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
